Update Gradle Build To Reduce Some Duplication
Also upgrade to gradle 5.6